# job-agent

./: .gitignore  CLAUDE.md  cv.md  data.json  index.html  package-lock.json  package.json  pyproject.toml
config/: companies.yaml  resume_text.txt  settings.yaml
dashboard/: index.html
interview-prep/: story-bank.md
modes/: auto-discover.md  digest.md
reports/: 001-deloitte-2026-04-16.md  001-programmers-io-2026-04-23.md  001-py-data-inc-2026-04-09.md  002-pnc-2026-04-09.md  002-progressive-2026-04-23.md  002-us101-guidehouse-inc-2026-04-16.md  003-air-force-civilian-service-2026-04-09.md  003-usaa-2026-04-23.md  003-viasat-inc-2026-04-16.md  004-amira-learning-inc-2026-04-09.md  004-lockheed-martin-2026-04-23.md  004-mistral-ai-2026-04-16.md  005-abbvie-2026-04-16.md  005-bausch-lomb-2026-04-09.md  005-elevance-health-2026-04-23.md  006-echostar-2026-04-16.md  006-rolemapper-technologies-limited-2026-04-23.md  006-tekfortune-inc-2026-04-09.md  007-amazon-com-services-llc-a57-2026-04-23.md  007-strativ-group-2026-04-16.md  007-tech-tandem-inc-2026-04-09.md  008-amazon-com-services-llc-2026-04-16.md  008-babel-street-2026-04-09.md  008-gardner-resources-consulting-llc-2026-04-23.md  009-ntt-data-services-2026-04-23.md  009-various-companies-2026-04-09.md  009-vizient-2026-04-16.md  010-airbnb-2026-04-23.md  010-superbet-2026-04-16.md  010-tech-tandem-inc-2026-04-09.md  011-airbnb-2026-04-23.md  011-amazon-com-services-llc-a57-2026-04-09.md  011-prophecy-technologies-2026-04-16.md  012-greengrowth-cpas-2026-04-09.md  012-reddit-2026-04-23.md  (+9 more)
scripts/: daily_run.sh  (+1 more)
(+33 files in other folders)
